--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -25,13 +25,14 @@ body {
 }
 
 .name {
-	padding-top: 10px;
+
 }
 
 .side-bar {
-	border-style: solid;
-	border-color: grey;
-	
+	position: absolute;
+	height: 100%;
+	padding-left: 100px;
+	border-right: 2px solid grey;
 }
 
 .ion-plus {
